[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
axum = { version = "0.7.4", features = ["http2", "tokio", "tracing", "macros"] }
axum-github-webhook-extract = "0.2.0"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive", "env"] }
directories = "5.0.1"
futures = "0.3.30"
git2 = "0.18.2"
lazy_static = "1.4.0"
octocrab = { version = "0.34.1", features = ["stream"] }
secrecy = "0.8.0"
serde = { version = "1.0.196", features = ["derive"] }
tap = "1.0.1"
# macros, rt-multi-thread for #[tokio::main]
tokio = { version = "1.36.0", features = ["rt-multi-thread", "process"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
assert-json-diff = "2.0.2"
# transitive deps we use directly
http = "1.0.0"
serde_json = "1.0"
hmac-sha256 = "1.1.7"
hex = "0.4.3"
tower = "0.4.13"
http-body-util = "0.1.0"
wiremock = "0.6.0"
