[project]
name = "scverse-benchmark"
description = "Scverse benchmark queue and runner"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
authors = [
    { name = "Philipp Angerer", email = "philipp.angerer@helmholtz-munich.de" },
]
urls.Source = "https://github.com/scverse/benchmark"
readme = "README.md"
dependencies = [
    "typer",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=8.1",
]

[project.scripts]
scverse-benchmark = "scverse_benchmark._shared.cli:app"

[tool.hatch.version]
source = "vcs"

[tool.coverage.run]
source_pkgs = ["scverse_benchmark"]
omit = ["**/test_*.py"]
[tool.coverage.paths]
source = ["./src", "**/site-packages"]
[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = [
]
testpaths = ["./tests"]
xfail_strict = true

[tool.pyright]
reportRedeclaration = false

[tool.ruff]
src = ["src"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # prefer 0 blank lines before class docstring
    "D213",   # prefer multiline docstring summary on first line
    "ANN101", # don’t do type annotations for self in method
    "C408",   # dict constructor usage is fine
    "COM812", # Leave trailing comma to formatter
    "ISC001", # Leave single line string concat to formatter
    "TID252", # relative imports are fine
]
[tool.ruff.lint.isort]
known-first-party = ["scverse_benchmark"]
required-imports = ["from __future__ import annotations"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]
